--- a/Frontend - Organi/blog.html
+++ b/Frontend - Organi/blog.html
@@ -14,278 +14,299 @@
 
 <body>
 
- <!--HEADER-START-->
+  <!--HEADER-START-->
 
- <header>
+  <header>
 
-  <section id="header">
+    <section id="header">
 
       <div class="upper-side">
 
-          <div class="container">
+        <div class="container">
 
-              <div class="row">
-
-
-                  <div class="col-sm-12 col-md-6 col-lg-6">
-                      <div class="service">
-                          <span>Free Shipping on all orders $120</span>
-
-                      </div>
-                  </div>
-
-                  <div class="col-sm-12 col-md-6 col-lg-6">
-                      <div class="social-medias">
-                          <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
-                          <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
-                          <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-                          <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
-                          <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
-                      </div>
-
-                  </div>
+          <div class="row">
 
 
-
+            <div class="col-sm-12 col-md-6 col-lg-6">
+              <div class="service">
+                <span>Free Shipping on all orders $120</span>
 
               </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-6">
+              <div class="social-medias">
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
+              </div>
+
+            </div>
+
+
+
 
           </div>
+
+        </div>
       </div>
 
       <div class="middle-side">
 
-          <div class="row" style="width: 100%">
+        <div class="row" style="width: 100%">
 
 
-              <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="col-sm-12 col-md-6 col-lg-3">
 
-                  <div class="right-side">
-                      <div class="logo">
-                          <a href="home.html"><img src="assets/images/info-logos/header-logo.png" alt=""></a>
-                      </div>
-                      <a href="login.html">
-                          <div class="account">
-                              <div class="image">
-                                  <img src="assets/images/info-logos/user.png" alt="">
-                              </div>
-                              <span class="login">Sign in / Sign up</span>
-                          </div>
-                      </a>
-
-                  </div>
-
+            <div class="right-side">
+              <div class="logo">
+                <a href="home.html"><img src="assets/images/info-logos/header-logo.png" alt=""></a>
               </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-7">
-                  <div class="container">
-                      <div class="row">
-                          <div class="search">
-                              <div class="search-design1">
-
-                              </div>
-                              <div class="search-design2">
-
-                              </div>
-
-                              <form>
-                                  <input type="text" class="form-control" placeholder="Search anything ... ">
-                                  <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                              </form>
-
-                          </div>
-                      </div>
+              <a href="login.html">
+                <div class="account">
+                  <div class="image">
+                    <img src="assets/images/info-logos/user.png" alt="">
                   </div>
+                  <span class="login">Sign in / Sign up</span>
+                </div>
+              </a>
 
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-2">
-
-                  <div class="items">
-                      <div class="icons">
-
-                          <div class="user" style="margin-right: 20px">
-                              <a href=""><i class="fa-solid fa-shuffle"></i></a>
-                          </div>
-
-
-                          <div class="cart">
-                              <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-                              <sup>0</sup>
-                          </div>
-
-                          <div class="wishlist">
-                              <a href="wishlist.html"><i class="fa-solid fa-heart"></i></a>
-                              <sup>0</sup>
-                          </div>
-
-
-                      </div>
-
-                      <div class="flags">
-
-                          <div class="flag-header">
-
-                              <div class="country-flag">
-                                  <span>US</span>
-
-                                  <div class="image">
-                                      <img src="assets/images/flags/united-states.png" alt="">
-                                  </div>
-                                  <i class="fa-solid fa-angle-down"></i>
-                              </div>
-
-                          </div>
-
-                          <div class="flag-content invisible">
-
-                              <div class="country-flag flag-item">
-                                  <span>AZ</span>
-
-                                  <div class="image">
-                                      <img src="assets/images/flags/azerbaijan.png" alt="">
-                                  </div>
-
-                              </div>
-
-                              <div class="country-flag flag-item">
-                                  <span>TR</span>
-
-                                  <div class="image turkey">
-                                      <img src="assets/images/flags/turkey.png" alt="">
-                                  </div>
-                              </div>
-                          </div>
-
-                      </div>
-                  </div>
-
-              </div>
-
+            </div>
 
           </div>
+
+          <div class="col-sm-12 col-md-6 col-lg-7">
+            <div class="container">
+              <div class="row">
+                <div class="search">
+                  <div class="search-design1">
+
+                  </div>
+                  <div class="search-design2">
+
+                  </div>
+
+                  <form>
+                    <input type="text" class="form-control" placeholder="Search anything ... ">
+                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                  </form>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="col-sm-12 col-md-6 col-lg-2">
+
+            <div class="items">
+              <div class="icons">
+
+                <div class="user" style="margin-right: 20px">
+                  <a href=""><i class="fa-solid fa-shuffle"></i></a>
+                </div>
+
+
+                <div class="cart">
+                  <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                  <sup>0</sup>
+                </div>
+
+                <div class="wishlist">
+                  <a href="wishlist.html"><i class="fa-solid fa-heart"></i></a>
+                  <sup>0</sup>
+                </div>
+
+
+              </div>
+
+              <div class="flags">
+
+                <div class="flag-header">
+
+                  <div class="country-flag">
+                    <span>US</span>
+
+                    <div class="image">
+                      <img src="assets/images/flags/united-states.png" alt="">
+                    </div>
+                    <i class="fa-solid fa-angle-down"></i>
+                  </div>
+
+                </div>
+
+                <div class="flag-content invisible">
+
+                  <div class="country-flag flag-item">
+                    <span>AZ</span>
+
+                    <div class="image">
+                      <img src="assets/images/flags/azerbaijan.png" alt="">
+                    </div>
+
+                  </div>
+
+                  <div class="country-flag flag-item">
+                    <span>TR</span>
+
+                    <div class="image turkey">
+                      <img src="assets/images/flags/turkey.png" alt="">
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+
+        </div>
 
       </div>
 
       <div class="down-side">
 
-          <div class="row" style="width: 100%;">
+        <div class="row" style="width: 100%;">
 
-              <div class="col-sm-12 col-md-6 col-lg-7">
-                  <div class="menu">
-                      <ul style="height: 50px;">
-                          <i>
-                              <li>
-                                  <a href="home.html">Home</a>
-                                  <div class="horizontal-line"></div>
-                              </li>
-                          </i>
-                          <i>
-                              <li>
-                                  <a href="shop.html">Shop</a>
-                                  <div class="horizontal-line"></div>
-                              </li>
-                          </i>
-                          <i>
-                              <li>
-                                  <a href="blog.html">Blog</a>
-                                  <div class="horizontal-line"></div>
-                              </li>
-                          </i>
-                          <i>
-                              <li>
-                                  <a href="about.html">About</a>
-                                  <div class="horizontal-line"></div>
-                              </li>
-                          </i>
-                          <i>
-                              <li>
-                                  <a href="contact.html">Contact</a>
-                                  <div class="horizontal-line"></div>
-                              </li>
-                          </i>
-                          <div class="account">
+          <div class="col-sm-12 col-md-6 col-lg-7">
+            <div class="menu">
+              <ul style="height: 50px;">
 
-                              <div class="account-title ">
-                                  <i>
-                                      <li>
-                                          <a href="register.html">Account</a>
-                                          <div class="horizontal-line"></div>
-                                      </li>
-                                  </i>
-                              </div>
+                <li>
+                  <a href="home.html">Home</a>
+                  <div class="horizontal-line"></div>
+                </li>
 
 
-                              <div class="account-menu">
-                                  <i style="display: block">
-                                      <li>
-                                          <div class="line">
-                                              <a href="login.html">Login</a>
-                                          </div>
-                                      </li>
-                                  </i>
-                                  <i>
-                                      <li>
-                                          <div class="line">
-                                              <a href="register.html">Register</a>
-                                          </div>
-                                      </li>
-                                  </i>
-                                  <i>
-                                      <li style="width: 210px">
-                                          <div class="line">
-                                              <a href="forgot-password.html">Forgot Password</a>
-                                          </div>
-                                      </li>
-                                  </i>
-                              </div>
-                          </div>
-
-                      </ul>
-                  </div>
-
-              </div>
+                <li>
+                  <a href="shop.html">Shop</a>
+                  <div class="horizontal-line"></div>
+                </li>
 
 
-              <div class="col-sm-12 col-md-6 col-lg-5">
-                  <div class="info">
-                      <a href="contact.html">
-                          <div class="phone-number content">
-                              <div class="image">
-                                  <img src="assets/images/info-logos/phone-call.png" alt="">
-                              </div>
-                              <div class="phone title ">
-                                  <span style="display: block">Call us</span>
-                                  <span>+1 (646) 555-7212</span>
-                              </div>
-                          </div>
-                      </a>
+                <li>
+                  <a href="blog.html">Blog</a>
+                  <div class="horizontal-line"></div>
+                </li>
 
-                      <a href="contact.html">
-                          <div class="email-address content">
-                              <div class="image">
-                                  <img src="assets/images/info-logos/email.png" alt="">
-                              </div>
-                              <div class="email title">
-                                  <span style="display: block">Email</span>
-                                  <span style="display: block">organi@gmail.com</span>
-                              </div>
-                          </div>
-                      </a>
+
+                <li>
+                  <a href="about.html">About</a>
+                  <div class="horizontal-line"></div>
+                </li>
+
+
+                <li>
+                  <a href="contact.html">Contact</a>
+                  <div class="horizontal-line"></div>
+                </li>
+
+
+                <div class="drop-down">
+
+                  <div class="drop-down-title">
+
+                    <li>
+                      <a href="#">Pages</a>
+                      <div class="horizontal-line"></div>
+                    </li>
 
                   </div>
-              </div>
+
+
+                  <div class="drop-down-menu">
+
+                    <li>
+                      <a href="cart.html">Cart</a>
+                    </li>
+
+
+                    <li>
+                      <a href="wishlist.html">Wishlist</a>
+                    </li>
+
+
+                    <li>
+                      <a href="product.html">Product Detail</a>
+                    </li>
+
+                  </div>
+                </div>
+
+                <div class="drop-down">
+
+                  <div class="drop-down-title">
+
+                    <li>
+                      <a href="register.html">Account</a>
+                      <div class="horizontal-line"></div>
+                    </li>
+
+                  </div>
+
+                  <div class="drop-down-menu">
+
+                    <li>
+                      <a href="login.html">Login</a>
+                    </li>
+
+                    <li>
+                      <a href="register.html">Register</a>
+                    </li>
+
+                    <li>
+                      <a href="forgot-password.html">Forgot Password</a>
+                    </li>
+
+                  </div>
+                </div>
+
+              </ul>
+            </div>
 
           </div>
 
+          <div class="col-sm-12 col-md-6 col-lg-5">
+            <div class="info">
+              <a href="contact.html">
+                <div class="phone-number content">
+                  <div class="image">
+                    <img src="assets/images/info-logos/phone-call.png" alt="">
+                  </div>
+                  <div class="phone title ">
+                    <span style="display: block">Call us</span>
+                    <span>+1 (646) 555-7212</span>
+                  </div>
+                </div>
+              </a>
+
+              <a href="contact.html">
+                <div class="email-address content">
+                  <div class="image">
+                    <img src="assets/images/info-logos/email.png" alt="">
+                  </div>
+                  <div class="email title">
+                    <span style="display: block">Email</span>
+                    <span style="display: block">organi@gmail.com</span>
+                  </div>
+                </div>
+              </a>
+
+            </div>
+          </div>
+
+        </div>
+
       </div>
 
-  </section>
+    </section>
 
-</header>
+  </header>
 
-<!--HEADER-END-->
-
+  <!--HEADER-END-->
 
 
   <!--MAIN-START-->
@@ -712,7 +733,7 @@
             </div>
 
           </div>
-          
+
         </div>
 
         <nav aria-label="Page navigation example">
@@ -738,9 +759,9 @@
 
 
 
-   <!--FOOTER-START-->
+  <!--FOOTER-START-->
 
-   <footer>
+  <footer>
 
     <section id="footer" class="mt-5">
 
@@ -757,7 +778,7 @@
               </div>
 
               <div class="subscribe my-4">
-                
+
                 <form class="input">
                   <input class="form-control" type="text" placeholder="Email Address">
                   <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</a>
